--- a/force/force.html
+++ b/force/force.html
@@ -5,6 +5,7 @@
     <script type="text/javascript" src="d3/d3.min.js"></script>
     <script type="text/javascript" src="d3/d3.geom.min.js"></script>
     <script type="text/javascript" src="d3/d3.layout.min.js"></script>
+    <script type="text/javascript" src="d3/d3.v2.js"></script>
     <link type="text/css" rel="stylesheet" href="force.css"/>
   </head>
   <body>
